[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-chatter"
version = "0.1.0"
description = "Automated WhatsApp replies using Ollama and Selenium"
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.10",
  "pytest>=7.0",
]

[project.scripts]
whatsapp-chatter = "whatsapp_chatter.cli:main"

